--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>长沙市珺琟学校C2204班</tile>
+    <title>长沙市珺琟学校C2204班</title>
   </head>
   <body>
     <p>Nothing here</p>
