--- a/index.html
+++ b/index.html
@@ -1,69 +1,38 @@
 <!DOCTYPE HTML>
-<HTML>
-    <HEAD>
-        <TITLE>长沙市珺琟学校C2204班</TITLE>
-    </HEAD>
-    <!-- -->
-    <BODY>
-        <table align="left" width="1500" border="0" cellpadding="0" cellspacing="0">
-            <tr height="50" bgcolor="A4A4A">
-                <td>
-                    <a herf="cjjwc2204.github.io">首页</a>
-                </td>
-                <td herf="cjjwc2204.github.io/picture.html">回忆</td>
-            </tr>
-            <tr>
-                <td>
-                    <table width="800" border="0" cellpadding="0" cellspacing="0">
-                        <tr>
-                            <td width="200" valign="top">
-                                <table width="200" border="0" cellpadding="0" cellspacing="0">
-                                    <tr>
-                                        <td>
-                                            <a href="main.html">首页</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <a href="news.html">新闻</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <a href="photo.html">照片</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <a href="message.html">留言</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <a href="contact.html">联系我们</a>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </td>
-                            <td width="600" valign="top">
-                                <table width="600" border="0" cellpadding="0" cellspacing="0">
-                                    <tr>
-                                        <td>
-                                            <img src="images/main.jpg" width="600" height="200">
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <p>欢迎访问长沙市珺琟学校C2204毕业纪念网站！</p>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <p>本网站是为了纪念长沙市珺琟学校C2204班的毕业而建立的，希望大家能够通过本网站了解到更多关于我们的信息。</p>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <p>如果您有任何问题或建议，请通过留言板或者联系我们页面告
-    </BODY>
-</HTML>
+<html>
+<head>
+    <title>长沙市珺琟学校C2204班</title>
+</head>
+<body>
+    <nav>
+        <ul>
+            <li><a href="cjjwc2204.github.io">首页</a></li>
+            <li><a href="cjjwc2204.github.io/picture.html">回忆</a></li>
+        </ul>
+    </nav>
+    <table align="left" width="1500" border="0" cellpadding="0" cellspacing="0">
+        <tr height="50" bgcolor="A4A4A">
+            <td>
+                <a href="main.html">首页</a>
+            </td>
+            <td>
+                <a href="news.html">新闻</a>
+            </td>
+            <td>
+                <a href="photo.html">照片</a>
+            </td>
+            <td>
+                <a href="message.html">留言</a>
+            </td>
+            <td>
+                <a href="contact.html">联系我们</a>
+            </td>
+        </tr>
+    </table>
+    <div>
+        <h1>欢迎访问长沙市珺琟学校C2204毕业纪念网站！</h1>
+        <p>本网站是为了纪念长沙市珺琟学校C2204班的毕业而建立的，希望大家能够通过本网站了解到更多关于我们的信息。</p>
+        <p>如果您有任何问题或建议，请通过留言板或者联系我们页面告知我们。</p>
+    </div>
+</body>
+</html>
