--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
-<!DOCTYPE HTML>
+<!-- <!DOCTYPE HTML>
 <html>
 <head>
     <title>长沙市珺琟学校C2204班</title>
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+            <div class="brand">长沙市珺琟学校C2204班</div>
+            <a href="https://cjjwc2204.github.io/">首页</a>
+        </nav>
+    </header>
     <nav>
         <ul>
             <li><a href="cjjwc2204.github.io">首页</a></li>
@@ -35,4 +41,36 @@
         <p>如果您有任何问题或建议，请通过留言板或者联系我们页面告知我们。</p>
     </div>
 </body>
+</html> -->
+<!DOCTYPE html>
+<html>
+	<head>
+		<title></title>
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="css/styles.css">
+	</head>
+	<body background="" style="background-size:100% 100%;background-repeat:no-repeat;background-attachment:fixed;">
+		<header>
+	        <nav class="navbar">
+	        	<div class="brand">长沙市珺琟学校C2204班</div>
+	            <a href="https://cjjwc2204.github.io/">首页</a>
+                <a href="https://cjjwc2204.github.io/new">新主页</a>
+	        </nav>
+    	</header>
+<!--     	<br>
+    	<br>
+    	<br>
+    	<br>
+    	<br>
+    	<br>
+    	<br>
+    	<br>
+    	<p>
+	    	<div class="small-title">祝C2201所有学生</div>
+	    </p>
+	    <p>
+	    	<div class="big-title">中考必胜</div>
+    	</p> -->
+	</body>
+
 </html>
